apps/handbrake-web/handbrake-web.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: volume
        - name: config-map
          configMap:
            name: config-map
        - name: video
          emptyDir: {}
        - name: config
          configMap:
            name: config
      containers:
        - name: handbrake-web-server
          image: ghcr.io/thenickoftime/handbrake-web-server@sha256:6aa18122e08299cf05edf0aa6135d9c97d92839933f5377f8fde59978430e543
          resources:
            requests:
              memory: 100M
            limits:
              memory: 1G
          volumeMounts:
            - name: volume
              mountPath: /data
            - name: video
              mountPath: /video
            - name: config
              mountPath: /data/config.yaml
              subPath: config.yaml
            - name: config
              mountPath: /data/presets/super_hq_h265_mkv.json
              subPath: super_hq_h265_mkv.json
          ports:
            - name: http
              containerPort: 9999

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: worker-deployment
  labels: &labels
    app.kubernetes.io/component: worker
spec:
  replicas: 3
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: data
          emptyDir: {}
        - name: video
          emptyDir: {}
      containers:
        - name: handbrake-web-worker
          image: ghcr.io/thenickoftime/handbrake-web-worker@sha256:4676054730c16fb7081d7c4f7b546272a022010e8adbb893df9d274885dfbc5e
          resources:
            requests:
              memory: 1G
            limits:
              memory: 8G
          volumeMounts:
            - name: data
              mountPath: /data
            - name: video
              mountPath: /video
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
