apps/handbrake-web/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels: &labels
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: nas-media
          persistentVolumeClaim:
            claimName: nas-media
        - name: volume
          persistentVolumeClaim:
            claimName: volume
        - name: config-map
          configMap:
            name: config-map
        - name: video
          emptyDir: {}
        - name: config
          configMap:
            name: config
      containers:
        - name: handbrake-web-server
          image: ghcr.io/thenickoftime/handbrake-web-server@sha256:6aa18122e08299cf05edf0aa6135d9c97d92839933f5377f8fde59978430e543
          volumeMounts:
            - name: nas-media
              mountPath: /media
            - name: volume
              mountPath: /data
            - name: video
              mountPath: /video
            - name: config
              mountPath: /data/config.yaml
              subPath: config.yaml
            - name: config
              mountPath: /data/presets/super_hq_4k_hvec.json
              subPath: super_hq_4k_hvec.json
          resources:
            requests:
              memory: 100M
            limits:
              memory: 1G
          ports:
            - name: http
              containerPort: 9999
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: worker-deployment
  labels: &labels
    app.kubernetes.io/component: worker
spec:
  replicas: 3
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: nas-media
          persistentVolumeClaim:
            claimName: nas-media
        - name: data
          emptyDir: {}
        - name: video
          emptyDir: {}
      containers:
        - name: handbrake-web-worker
          image: ghcr.io/thenickoftime/handbrake-web-worker@sha256:4676054730c16fb7081d7c4f7b546272a022010e8adbb893df9d274885dfbc5e
          volumeMounts:
            - name: nas-media
              mountPath: /media
            - name: data
              mountPath: /data
            - name: video
              mountPath: /video
          resources:
            requests:
              memory: 1G
            limits:
              memory: 8G
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app.kubernetes.io/component: app
  ports:
    - name: http
      port: 80
      targetPort: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    tailscale.com/proxy-group: ingress-proxy-group
spec:
  defaultBackend:
    service:
      name: app-service
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts: [handbrake-web]
